chore: sync local changes

--- a/embuild-analyses/analyses/vergunningen-goedkeuringen/content.mdx
+++ b/embuild-analyses/analyses/vergunningen-goedkeuringen/content.mdx
@@ -6,6 +6,10 @@ tags: [vergunningen, bouw, data]
 slug: vergunningen-goedkeuringen
 ---
 
+import { VergunningenDashboard } from "@/components/analyses/vergunningen-goedkeuringen/VergunningenDashboard"
+
 # Vergunningen Goedkeuringen
 
-Hier komt de analyse van de goedgekeurde vergunningen.
+Hieronder vindt u de analyse van de goedgekeurde vergunningen voor residentiële gebouwen, opgesplitst in renovatie en nieuwbouw.
+
+<VergunningenDashboard />
