chore: sync workspace changes [auto]

--- a/embuild-analyses/analyses/starters-stoppers/content.mdx
+++ b/embuild-analyses/analyses/starters-stoppers/content.mdx
@@ -1,11 +1,16 @@
 ---
 title: Starters en Stoppers
-date: 2023-11-02
+date: 2023-12-31
 summary: Analyse van startende en stoppende ondernemingen.
 tags: [economie, ondernemerschap, data]
 slug: starters-stoppers
 ---
 
-# Starters en Stoppers
+import { StartersStoppersDashboard } from "@/components/analyses/starters-stoppers/StartersStoppersDashboard"
 
-Hier komt de analyse van starters en stoppers.
+
+Deze pagina analyseert starters (eerste btw-inschrijvingen) en stoppers (starters die na 1 jaar niet meer actief zijn), en toont de overlevingskans na 1 t.e.m. 5 jaar.
+
+Gebruik de filters bovenaan om te schakelen tussen België/regio/provincie en om te filteren op economische sector (NACE hoofdcode).
+
+<StartersStoppersDashboard />
