wip: sync changes

--- a/embuild-analyses/analyses/prijsherziening-index-i-2021/content.mdx
+++ b/embuild-analyses/analyses/prijsherziening-index-i-2021/content.mdx
@@ -10,7 +10,7 @@ sourceUrl: https://economie.fgov.be/nl/themas/ondernemingen/specifieke-sectoren/
 sourcePublicationDate: 2026-01-30
 ---
 
-import { PrijsherzieningDashboard } from "@/components/analyses/prijsherziening/PrijsherzieningDashboard"
+import { PrijsherzieningDashboard } from "../../src/components/analyses/prijsherziening/PrijsherzieningDashboard"
 
 ## Wat is de Prijsherzieningsindex I 2021?
 
