Sync: workspace changes

--- a/embuild-analyses/analyses/gemeentelijke-investeringen/content.mdx
+++ b/embuild-analyses/analyses/gemeentelijke-investeringen/content.mdx
@@ -24,11 +24,9 @@ Deze analyse toont de **geplande gemeentelijke investeringen** in Vlaanderen op 
 
 ## Concrete investeringsprojecten
 
-Voor aannemers en bouwprofessionals die op zoek zijn naar **concrete projectdetails** (projectnamen, beschrijvingen, planning), bekijk de analyse [Gemeentelijke Bouwprojecten Vlaanderen 2026-2031](/data-blog/analyses/bouwprojecten-gemeenten). Deze toont 6,368 doorzoekbare projecten uit de meerjarenplannen 2026-2031 (totaal €8.2 miljard).
+Voor **concrete projectdetails** (projectnamen, beschrijvingen, planning), bekijk de analyse [Gemeentelijke Bouwprojecten Vlaanderen 2026-2031](/data-blog/analyses/bouwprojecten-gemeenten). Deze toont 6,368 doorzoekbare projecten uit de meerjarenplannen 2026-2031 (totaal €8.2 miljard).
 
-## Geaggregeerde Overzichten: Twee perspectieven
-
-De data wordt getoond volgens twee classificatiesystemen:
+## De data wordt getoond volgens twee classificatiesystemen:
 
 ### 1. Per Beleidsdomein (BV)
 Investeringen ingedeeld volgens **wat** gemeenten doen - bijvoorbeeld mobiliteit, onderwijs, cultuur, of sport. Deze indeling toont de beleidsprioriteiten van gemeenten.
@@ -38,10 +36,7 @@ Investeringen ingedeeld volgens **hoe** gemeenten investeren - materiële activa
 
 ## Hoe de data te interpreteren
 
-De investeringen worden getoond op twee manieren:
-
-- **Totaal**: De absolute bedragen in euro's per legislatuur - nuttig om de omvang van investeringen te zien
-- **Per inwoner**: Bedragen per hoofd van de bevolking - beter voor vergelijkingen tussen gemeenten van verschillende groottes
+De investeringen worden getoond op twee manieren: totaal (de absolute geplande investeringen per gemeente) en per inwoner.
 
 Voor elke gemeente worden **drie datapunten** getoond: de geplande investeringen volgens het meerjarenplan van 2014, 2020 en 2026. Dit geeft inzicht in de evolutie van investeringsprioriteiten over drie legislaturen.
 
