fix: remove emoticons from bouwprojecten-gemeenten analysis and components

--- a/embuild-analyses/analyses/bouwprojecten-gemeenten/content.mdx
+++ b/embuild-analyses/analyses/bouwprojecten-gemeenten/content.mdx
@@ -39,16 +39,16 @@ Gebruik de filters om relevante projecten te vinden:
 
 Projecten zijn automatisch ingedeeld in 10 bouwsectoren op basis van projectbeschrijvingen:
 
-- 🛣️ **Wegenbouw** (1,390 projecten) - Wegen, straten, fietspaden, bruggen
-- 🌳 **Groen** (940 projecten) - Parks, natuurgebieden, recreatie
-- ♿ **Zorg** (734 projecten) - Woonzorgcentra, rusthuizen, kinderopvang
-- 💧 **Riolering** (449 projecten) - Riolering, afvalwater, drainage
-- 🏫 **Scholenbouw** (384 projecten) - Scholen, kleuterscholen, leslokalen
-- 🏢 **Gebouwen** (377 projecten) - Gemeentehuizen, administratieve centra
-- ⚽ **Sport** (359 projecten) - Sportzalen, voetbalvelden, zwembaden
-- 🎭 **Cultuur** (287 projecten) - Bibliotheken, gemeenschapscentra, musea
-- 💡 **Verlichting** (250 projecten) - Straatverlichting, verkeerslichten
-- 🏘️ **Ruimtelijke ordening** (177 projecten) - Herinrichting, gebiedsontwikkeling
+- **Wegenbouw** (1,390 projecten) - Wegen, straten, fietspaden, bruggen
+- **Groen** (940 projecten) - Parks, natuurgebieden, recreatie
+- **Zorg** (734 projecten) - Woonzorgcentra, rusthuizen, kinderopvang
+- **Riolering** (449 projecten) - Riolering, afvalwater, drainage
+- **Scholenbouw** (384 projecten) - Scholen, kleuterscholen, leslokalen
+- **Gebouwen** (377 projecten) - Gemeentehuizen, administratieve centra
+- **Sport** (359 projecten) - Sportzalen, voetbalvelden, zwembaden
+- **Cultuur** (287 projecten) - Bibliotheken, gemeenschapscentra, musea
+- **Verlichting** (250 projecten) - Straatverlichting, verkeerslichten
+- **Ruimtelijke ordening** (177 projecten) - Herinrichting, gebiedsontwikkeling
 
 ## Project Browser
 
