fix: update capitalization to sentence case in bouwprojecten and investeringen blogs

--- a/embuild-analyses/analyses/gemeentelijke-investeringen/content.mdx
+++ b/embuild-analyses/analyses/gemeentelijke-investeringen/content.mdx
@@ -28,10 +28,10 @@ Voor **concrete projectdetails** (projectnamen, beschrijvingen, planning), bekij
 
 ## De data wordt getoond volgens twee classificatiesystemen:
 
-### 1. Per Beleidsdomein (BV)
+### 1. Per beleidsdomein (BV)
 Investeringen ingedeeld volgens **wat** gemeenten doen - bijvoorbeeld mobiliteit, onderwijs, cultuur, of sport. Deze indeling toont de beleidsprioriteiten van gemeenten.
 
-### 2. Per Economische Rekening (REK)
+### 2. Per economische rekening (REK)
 Investeringen ingedeeld volgens **hoe** gemeenten investeren - materiële activa (gebouwen, infrastructuur), immateriële activa (software, intellectuele eigendom), of subsidies. Deze indeling toont de aard van de investeringen.
 
 ## Hoe de data te interpreteren
