--- a/embuild-analyses/analyses/bouwprojecten-gemeenten/content.mdx
+++ b/embuild-analyses/analyses/bouwprojecten-gemeenten/content.mdx
@@ -1,5 +1,5 @@
 ---
-title: Gemeentelijke Bouwprojecten Vlaanderen 2026-2031
+title: Gemeentelijke bouwprojecten Vlaanderen 2026-2031
 date: 2026-01-09
 summary: Doorzoekbare database van 6,368 concrete investeringsprojecten uit meerjarenplannen van Vlaamse gemeenten (totaal €8.2 miljard).
 tags: [gemeente, bouwprojecten, aannemers, investeringen, meerjarenplan]
@@ -7,53 +7,53 @@ slug: bouwprojecten-gemeenten
 sourceProvider: Agentschap Binnenlands Bestuur
 sourceTitle: Gemeentelijke jaarrekeningen - BBC-DR data
 sourceUrl: https://lokaalbestuur.vlaanderen.be/financien/bbc-dr/gemeente-financien
-sourcePublicationDate: 2025-12-31
----
-
-import { ProjectBrowser } from "@/components/analyses/bouwprojecten-gemeenten/ProjectBrowser"
-
-Deze analyse biedt **aannemers en bouwprofessionals** toegang tot concrete investeringsprojecten uit de meerjarenplannen van Vlaamse gemeenten. Elk project bevat de volledige beschrijving, geplande bedragen per jaar, en automatische categorisering per sector.
-
-## Over de data
-
-**Planningsperiode**: 2026-2031 (huidige legislatuur)
-**Gemeenten**: 133 Vlaamse gemeenten
-**Projecten**: 6,368 concrete investeringsprojecten
-**Totaal budget**: €8.2 miljard
-
-**Let op:** Dit zijn **planningscijfers** uit gemeentelijke meerjarenplannen die werden opgesteld aan het begin van de legislatuur 2026-2031. Deze plannen kunnen gedurende de legislatuur worden bijgestuurd.
-
-## Hoe de data te gebruiken
-
-### Voor aannemers en bouwbedrijven
-
-Gebruik de filters om relevante projecten te vinden:
-
-1. **Geografisch zoeken**: Filter op gemeente om lokale projecten te vinden
-2. **Sector filtering**: Selecteer categorieën die bij je specialisatie passen (wegenbouw, scholenbouw, riolering, etc.)
-3. **Bedrag sortering**: Sorteer op projectgrootte om kansen te identificeren
-4. **Detail bekijken**: Klik op een project voor volledige beschrijving en jaarlijkse planning
-5. **Exporteren**: Download gefilterde projectlijsten als CSV voor je CRM
-
-### Categorieën
-
-Projecten zijn automatisch ingedeeld in 10 bouwsectoren op basis van projectbeschrijvingen:
-
-- **Wegenbouw** (1,390 projecten) - Wegen, straten, fietspaden, bruggen
-- **Groen** (940 projecten) - Parks, natuurgebieden, recreatie
-- **Zorg** (734 projecten) - Woonzorgcentra, rusthuizen, kinderopvang
-- **Riolering** (449 projecten) - Riolering, afvalwater, drainage
-- **Scholenbouw** (384 projecten) - Scholen, kleuterscholen, leslokalen
-- **Gebouwen** (377 projecten) - Gemeentehuizen, administratieve centra
-- **Sport** (359 projecten) - Sportzalen, voetbalvelden, zwembaden
-- **Cultuur** (287 projecten) - Bibliotheken, gemeenschapscentra, musea
-- **Verlichting** (250 projecten) - Straatverlichting, verkeerslichten
-- **Ruimtelijke ordening** (177 projecten) - Herinrichting, gebiedsontwikkeling
-
-## Project Browser
-
-<ProjectBrowser />
-
-## Relatie met geaggregeerde investeringsdata
-
-Deze analyse toont **concrete projectdetails** uit meerjarenplannen 2026-2031. Voor een overzicht van **geaggregeerde investeringstrends** over meerdere legislaturen (2014-2026) per beleidsdomein, zie de analyse [Gemeentelijke investeringen in Vlaanderen](/data-blog/analyses/gemeentelijke-investeringen).
+10: sourcePublicationDate: 2025-12-31
+11: ---
+12: 
+13: import { ProjectBrowser } from "@/components/analyses/bouwprojecten-gemeenten/ProjectBrowser"
+14: 
+15: Deze analyse biedt **aannemers en bouwprofessionals** toegang tot concrete investeringsprojecten uit de meerjarenplannen van Vlaamse gemeenten. Elk project bevat de volledige beschrijving, geplande bedragen per jaar, en automatische categorisering per sector.
+16: 
+17: ## Over de data
+18: 
+19: **Planningsperiode**: 2026-2031 (huidige legislatuur)
+20: **Gemeenten**: 133 Vlaamse gemeenten
+21: **Projecten**: 6,368 concrete investeringsprojecten
+22: **Totaal budget**: €8.2 miljard
+23: 
+24: **Let op:** Dit zijn **planningscijfers** uit gemeentelijke meerjarenplannen die werden opgesteld aan het begin van de legislatuur 2026-2031. Deze plannen kunnen gedurende de legislatuur worden bijgestuurd.
+25: 
+26: ## Hoe de data te gebruiken
+27: 
+28: ### Voor aannemers en bouwbedrijven
+29: 
+30: Gebruik de filters om relevante projecten te vinden:
+31: 
+32: 1. **Geografisch zoeken**: filter op gemeente om lokale projecten te vinden
+33: 2. **Sector filtering**: selecteer categorieën die bij je specialisatie passen (wegenbouw, scholenbouw, riolering, etc.)
+34: 3. **Bedrag sortering**: sorteer op projectgrootte om kansen te identificeren
+35: 4. **Detail bekijken**: klik op een project voor volledige beschrijving en jaarlijkse planning
+36: 5. **Exporteren**: download gefilterde projectlijsten als csv voor je crm
+37: 
+38: ### Categorieën
+39: 
+40: Projecten zijn automatisch ingedeeld in 10 bouwsectoren op basis van projectbeschrijvingen:
+41: 
+42: - **wegenbouw** (1,390 projecten) - wegen, straten, fietspaden, bruggen
+43: - **groen** (940 projecten) - parken, natuurgebieden, recreatie
+44: - **zorg** (734 projecten) - woonzorgcentra, rusthuizen, kinderopvang
+45: - **riolering** (449 projecten) - riolering, afvalwater, drainage
+46: - **scholenbouw** (384 projecten) - scholen, kleuterscholen, leslokalen
+47: - **gebouwen** (377 projecten) - gemeentehuizen, administratieve centra
+48: - **sport** (359 projecten) - sportzalen, voetbalvelden, zwembaden
+49: - **cultuur** (287 projecten) - bibliotheken, gemeenschapscentra, musea
+50: - **verlichting** (250 projecten) - straatverlichting, verkeerslichten
+51: - **ruimtelijke ordening** (177 projecten) - herinrichting, gebiedsontwikkeling
+52: 
+53: ## Projectbrowser
+54: 
+55: <ProjectBrowser />
+56: 
+57: ## Relatie met geaggregeerde investeringsdata
+58: 
+59: Deze analyse toont **concrete projectdetails** uit meerjarenplannen 2026-2031. Voor een overzicht van **geaggregeerde investeringstrends** over meerdere legislaturen (2014-2026) per beleidsdomein, zie de analyse [Gemeentelijke investeringen in Vlaanderen](/data-blog/analyses/gemeentelijke-investeringen).
