docs(bouwprojecten): update project counts and total budget to match new data
- Update project count: 6,368 → 11,095
- Update total budget: €8.2 → €16.0 miljard
- Update all category counts with latest numbers
- Add 'overige' category (4,684 projects)
- Reorder categories by count

--- a/embuild-analyses/analyses/bouwprojecten-gemeenten/content.mdx
+++ b/embuild-analyses/analyses/bouwprojecten-gemeenten/content.mdx
@@ -1,7 +1,7 @@
 ---
 title: Gemeentelijke bouwprojecten Vlaanderen 2026-2031
 date: 2026-01-09
-summary: Doorzoekbare database van 6,368 concrete investeringsprojecten uit meerjarenplannen van Vlaamse gemeenten (totaal €8.2 miljard).
+summary: Doorzoekbare database van 11,095 concrete investeringsprojecten uit meerjarenplannen van Vlaamse gemeenten (totaal €16.0 miljard).
 tags: [gemeente, bouwprojecten, aannemers, investeringen, meerjarenplan]
 slug: bouwprojecten-gemeenten
 sourceProvider: Agentschap Binnenlands Bestuur
@@ -12,43 +12,32 @@ sourcePublicationDate: 2025-12-31
 
 import { ProjectBrowser } from "@/components/analyses/bouwprojecten-gemeenten/ProjectBrowser"
 
-Deze analyse biedt **aannemers en bouwprofessionals** toegang tot concrete investeringsprojecten uit de meerjarenplannen van Vlaamse gemeenten. Elk project bevat de volledige beschrijving, geplande bedragen per jaar, en automatische categorisering per sector.
+Deze analyse toont concrete investeringsprojecten uit de meerjarenplannen van Vlaamse gemeenten. Elk project bevat de volledige beschrijving, geplande bedragen per jaar, en automatische categorisering per sector.
 
 ## Over de data
 
 **Planningsperiode**: 2026-2031 (huidige legislatuur)
 **Gemeenten**: 133 Vlaamse gemeenten
-**Projecten**: 6,368 concrete investeringsprojecten
-**Totaal budget**: €8.2 miljard
+**Projecten**: 11,095 concrete investeringsprojecten
+**Totaal budget**: €16.0 miljard
 
 **Let op:** Dit zijn **planningscijfers** uit gemeentelijke meerjarenplannen die werden opgesteld aan het begin van de legislatuur 2026-2031. Deze plannen kunnen gedurende de legislatuur worden bijgestuurd.
 
-## Hoe de data te gebruiken
-
-### Voor aannemers en bouwbedrijven
-
-Gebruik de filters om relevante projecten te vinden:
-
-1. **Geografisch zoeken**: filter op gemeente om lokale projecten te vinden
-2. **Sector filtering**: selecteer categorieën die bij je specialisatie passen (wegenbouw, scholenbouw, riolering, etc.)
-3. **Bedrag sortering**: sorteer op projectgrootte om kansen te identificeren
-4. **Detail bekijken**: klik op een project voor volledige beschrijving en jaarlijkse planning
-5. **Exporteren**: download gefilterde projectlijsten als csv voor je crm
-
 ### Categorieën
 
-Projecten zijn automatisch ingedeeld in 10 bouwsectoren op basis van projectbeschrijvingen:
+Projecten zijn automatisch ingedeeld in bouwsectoren op basis van projectbeschrijvingen:
 
-- **wegenbouw** (1,390 projecten) - wegen, straten, fietspaden, bruggen
-- **groen** (940 projecten) - parken, natuurgebieden, recreatie
-- **zorg** (734 projecten) - woonzorgcentra, rusthuizen, kinderopvang
-- **riolering** (449 projecten) - riolering, afvalwater, drainage
-- **scholenbouw** (384 projecten) - scholen, kleuterscholen, leslokalen
-- **gebouwen** (377 projecten) - gemeentehuizen, administratieve centra
-- **sport** (359 projecten) - sportzalen, voetbalvelden, zwembaden
-- **cultuur** (287 projecten) - bibliotheken, gemeenschapscentra, musea
-- **verlichting** (250 projecten) - straatverlichting, verkeerslichten
-- **ruimtelijke ordening** (177 projecten) - herinrichting, gebiedsontwikkeling
+- **wegenbouw** (2,614 projecten) - wegen, straten, fietspaden, bruggen
+- **groen** (1,705 projecten) - parken, natuurgebieden, recreatie
+- **zorg** (1,335 projecten) - woonzorgcentra, rusthuizen, kinderopvang
+- **riolering** (846 projecten) - riolering, afvalwater, drainage
+- **cultuur** (826 projecten) - bibliotheken, gemeenschapscentra, musea
+- **sport** (620 projecten) - sportzalen, voetbalvelden, zwembaden
+- **scholenbouw** (526 projecten) - scholen, kleuterscholen, leslokalen
+- **verlichting** (465 projecten) - straatverlichting, verkeerslichten
+- **ruimtelijke ordening** (448 projecten) - herinrichting, gebiedsontwikkeling
+- **gebouwen** (304 projecten) - gemeentehuizen, administratieve centra
+- **overige** (4,684 projecten) - projecten die niet in bovenstaande categorieën passen
 
 ## Projectbrowser
 
