--- a/embuild-analyses/analyses/bouwprojecten-gemeenten/content.mdx
+++ b/embuild-analyses/analyses/bouwprojecten-gemeenten/content.mdx
@@ -12,7 +12,7 @@ sourcePublicationDate: 2025-12-31
 
 import { ProjectBrowser } from "@/components/analyses/bouwprojecten-gemeenten/ProjectBrowser"
 
-Deze analyse toont concrete investeringsprojecten uit de meerjarenplannen van Vlaamse gemeenten. Elk project bevat een beschrijving van het project en de geplande investeringsbedragen. Het detailniveau van de beschrijving kan verschillen van gemeente te gemeente.
+Deze analyse toont concrete investeringsprojecten uit de meerjarenplannen van Vlaamse gemeenten. Elk project bevat een beschrijving van het project en de geplande investeringsbedragen. Het detailniveau van de beschrijving kan verschillen van gemeente tot gemeente.
 
 **Dit zijn **planningscijfers** uit gemeentelijke meerjarenplannen die werden opgesteld aan het begin van de legislatuur 2026-2031. Deze plannen kunnen gedurende de legislatuur worden bijgestuurd.
 
