feat(gemeentelijke-investeringen): update data files and add project-level data
- Update bv_lookups.json with latest category/policy area mappings
- Regenerate all municipality data chunks with updated processing
- Add new project-level data (projects_2026_chunk_*.json) for detailed analysis
- Add projects_metadata.json for category summaries and largest projects
- Update content.mdx with improved analysis sections
- Update process_investments.py to generate project-level outputs
- Refresh all metadata and Flanders-wide data

This enables more granular analysis of municipal investment projects with
category-based filtering and top project listings.

--- a/embuild-analyses/analyses/gemeentelijke-investeringen/content.mdx
+++ b/embuild-analyses/analyses/gemeentelijke-investeringen/content.mdx
@@ -31,6 +31,8 @@ Voor **concrete projectdetails** (projectnamen, beschrijvingen, planning), bekij
 ### 1. Per beleidsdomein (BV)
 Investeringen ingedeeld volgens **wat** gemeenten doen - bijvoorbeeld mobiliteit, onderwijs, cultuur, of sport. Deze indeling toont de beleidsprioriteiten van gemeenten.
 
+De data bevat uitsluitend **materiële investeringen**. Dit betekent dat de analyse zich focust op investeringen in gebouwen, infrastructuur, onroerend erfgoed en toegestane investeringssubsidies. Financiële investeringen en immateriële investeringen zijn uitgesloten. De data toont budgettaire boekhouding volgens het meerjarenplan, met zowel de totale uitgaven als de uitgaven per inwoner voor alle Vlaamse gemeenten en OCMW's. Op deze manier krijg je een helder beeld van de geplande investeringen in de fysieke infrastructuur en het gebouwenpatrimonium van gemeenten.
+
 ### 2. Per economische rekening (REK)
 Investeringen ingedeeld volgens **hoe** gemeenten investeren - materiële activa (gebouwen, infrastructuur), immateriële activa (software, intellectuele eigendom), of subsidies. Deze indeling toont de aard van de investeringen.
 
