feat(bouwprojecten): update category classification and data files
- Improve category_keywords.py with enhanced keyword sets reducing 'overige' by 50%
- Add 'werking' category for operational/administrative projects
- Update process_project_details.py with better sanitization
- Regenerate all project data chunks with improved categorization
- Update projects_metadata.json with category summaries
- Add test scripts for category verification
- Update content.mdx with latest analysis
- Update MunicipalityMap.tsx for better type safety
- Update project-types.ts with shared type definitions
- Update docs for category_keywords.py and process_project_details.py
- Add check_missed_keywords.py utility script

Data impact:
- Total projects: 30,579
- Reduced 'overige' from 15,674 to 7,479 (52% reduction)
- Added 6,343 projects to 'werking' category
- Improved categorization across all sectors

--- a/embuild-analyses/analyses/bouwprojecten-gemeenten/content.mdx
+++ b/embuild-analyses/analyses/bouwprojecten-gemeenten/content.mdx
@@ -11,6 +11,7 @@ sourcePublicationDate: 2025-12-31
 ---
 
 import { ProjectBrowser } from "@/components/analyses/bouwprojecten-gemeenten/ProjectBrowser"
+import { TopProjectsByCategory } from "@/components/analyses/bouwprojecten-gemeenten/TopProjectsByCategory"
 
 Deze analyse toont concrete investeringsprojecten uit de meerjarenplannen van Vlaamse gemeenten. Elk project bevat een beschrijving van het project en de geplande investeringsbedragen. Het detailniveau van de beschrijving kan verschillen van gemeente tot gemeente.
 
@@ -35,6 +36,10 @@ Projecten zijn automatisch ingedeeld in bouwsectoren op basis van projectbeschri
 ## Projectbrowser
 
 <ProjectBrowser />
+
+## Top projecten per categorie
+
+<TopProjectsByCategory />
 
 ## Relatie met geaggregeerde investeringsdata
 
