--- a/embuild-analyses/analyses/bouwondernemers/content.mdx
+++ b/embuild-analyses/analyses/bouwondernemers/content.mdx
@@ -1,7 +1,7 @@
 ---
 title: Bouwondernemers
 date: 2025-01-10
-summary: Analyse van zelfstandige ondernemers in de bouwsector per regio, geslacht en leeftijd.
+summary: Analyse van zelfstandige ondernemers per sector, regio, geslacht en leeftijd.
 tags: [bouw, ondernemerschap, economie]
 slug: bouwondernemers
 sourceProvider: Statbel
@@ -12,8 +12,8 @@ sourcePublicationDate: 2022-12-31
 
 import { BouwondernemersDashboard } from "@/components/analyses/bouwondernemers/BouwondernemersDashboard"
 
-Deze pagina analyseert het aantal zelfstandige ondernemers in de bouwsector in België, uitgesplitst per sector, geslacht, regio en leeftijd.
+Deze pagina analyseert het aantal zelfstandige ondernemers in België, uitgesplitst per sector, geslacht, regio en leeftijd.
 
-De data omvat alle bouwgerelateerde NACE-sectoren (F-codes) en toont de evolutie over de periode 2017-2022.
+De data omvat alle NACE-sectoren en toont de evolutie over de periode 2017-2022.
 
 <BouwondernemersDashboard />
